# ND-HFTT

2026_spring/group6_project/: README.md
2026_spring/group6_project/cpp/: Makefile
2026_spring/group6_project/cpp/include/ghostbook/ndfex/: protocol.h
2026_spring/group6_project/cpp/src/: CMakeLists.txt
2026_spring/group6_project/cpp/src/gateway/: main.cpp  ndfex_gateway.cpp  tcp_gateway.cpp
2026_spring/group6_project/cpp/src/matching_engine/: flat_hash_map.h  main.cpp  matching_main.cpp
2026_spring/group6_project/cpp/src/replay_engine/: replay_engine.h
2026_spring/group6_project/cpp/tests/: CMakeLists.txt  gateway_tcp_integration_tests.cpp  gateway_tests.cpp  ndfex_gateway_udp_integration_tests.cpp  replay_engine_tests.cpp
2026_spring/group6_project/submodules/team6-trading-system/include/hft/: ExchangeClient.h  PositionTracker.h  Strategy.h  multicast.h
2026_spring/group6_project/submodules/team6-trading-system/include/hft/msg/: market_data.h  order_entry.h
2026_spring/group6_project/submodules/team6-trading-system/src/: PositionTracker.cpp  order_entry.cpp
2026_spring/group6_project/submodules/team6-trading-system/src/strategies/: MomentumScalper.h  Simple.h
team6_ghostbook/: Makefile  README.md
team6_ghostbook/cpp/: CMakeLists.txt
team6_ghostbook/cpp/include/ghostbook/: gateway.h  protocol.h
team6_ghostbook/cpp/src/gateway/: main_ndfex.cpp  ndfex_gateway.h  tcp_gateway.h
team6_ghostbook/cpp/src/matching_engine/: matching_main.h
team6_ghostbook/cpp/src/replay_engine/: main.cpp  replay_engine.cpp
team6_ghostbook/cpp/tests/: matching_engine_bench.cpp  matching_engine_tests.cpp  ndfex_gateway_tcp_integration_tests.cpp  ndfex_gateway_tests.cpp  ndfex_replay_gateway_tests.cpp
team6_ghostbook/cpp/tests/scenarios/: README.md
team6_ghostbook/submodules/team6-trading-system/: .gitignore  Makefile  README.md
team6_ghostbook/submodules/team6-trading-system/include/hft/: ExchangeOrder.h  RiskSystem.h  orderbook.h
team6_ghostbook/submodules/team6-trading-system/include/hft/msg/: common.h
team6_ghostbook/submodules/team6-trading-system/src/: ExchangeClient.cpp  ExchangeOrder.cpp  RiskSystem.cpp  gb_test.cpp  liquidate.cpp  main.cpp  market_data.cpp  multicast.cpp  orderbook.cpp  probe.cpp  reference.cpp
team6_ghostbook/submodules/team6-trading-system/src/strategies/: ETFArbitrage.h  Liquidate.h  Logger.h  MarketMaker.h  SpreadScalper.h
team6_ghostbook/submodules/team6-trading-system/test/: test_risk.cpp
